docs/0.5.187/providers.md
# Providers
Starting with version 0.5, we have converted data sources (the ones we use for extracting data from Kubernetes) into 'providers'. This means:

  - Kwirth core can be extended by adding new providers.
  - Providers are now standardized, and they can be moved away from Kwirth core (converting them into plugins, for example).

Kwirth currently ships with the following providers:

  - **[Tick](./providers?id=tick)**. Just a demo provider, it creates a heartbeat every 5 seconds.
  - **[Events](./providers?id=events)**. Creates an event whenever a kube cluster event takes place.
  - **[Validating](./providers?id=validating)**. Creates an event whenever the kube API needs a validation from a Validating webhook.
  - **[Business](./providers?id=business)**. Ingests external business data into Kwirth via HTTP POST and distributes it to subscribed channels.

Just follow the links to get specific information on each provider.

## Architecture
Providers is one of the data-streaming subsystems inside Kwirth, and it is very easy to understand. The provider subsystem offers a decoupling layer between kube api and the channel subsystem, what adds these benefits:

  - **Isolation**, the channels are not tightly coupled to the kube API.
  - **Efficiency**, the data streams can be instantiated once per provider and distribute data to different channels (subscribers in fact), so the overhead introduced into kube API server is minimal.
  - **Enrichment**, you can build providers that introduce external data into the Kwirth ecosystem.

What follows is an architectural view of the provider/channel subsystem.

![provider-arch](./_media/ch-images/providers-arch.png ':class=imageclass80')


## Developing
When developing a new provider you must implement this interface:

```typescript
export interface IProvider {
  readonly id: string
  readonly providesRouter: boolean 
  addSubscriber: (c:IChannel, data:any) => Promise<void>
  removeSubscriber: (c:IChannel) => Promise<void>
  startProvider: () => Promise<void>
  router: Router|undefined
}
```

Where:
  - `id`, is the id of the provider, the one the channels will use for reference.
  - `providesRouter`, if you need to receive HTTP request from outside Kwirth, you must enable this and provide an Express router.
  - `addSubscriber`, a function for adding subscribers to your provider.
  - `removeSubscriber`, a function for removing subscriber to your provider.
  - `router` , if `providesRouter` is `true`, you must provide the Express router here. When you provide a router, the endpoint will be served at Kwirth HTTP endpoint: '/&lt;rootPath&gt;/&lt;runningInstance&gt;/provider/&lt;providerId&gt;', where
    - `rootPath` is the root path of Kwirth HTTP endpoints, typically / ot /kwirth.
    - `runningInstance` is the id of the cluster instance once it is started.
    - `providerId` is the id of your provider.
    - Example: /kwirth/23446-23446-23446-23446/provider/datastream (being 'datastream' the id of the provider).


## Tick
Tick provider is a demo provider. It does not extract any data from Kubernetes, its main purpose is to serve as a starting point for developers aiming to develop a new provider.

### What for
Tick provider creates a 'tick' every 5 seconds, so channels subscribed to Tick provider will receive an empty-data event every five seconds. That's it.

### Features
Tick provider has no configuration, the interval for the Tick is fixed. The source for ticks (a setInterval in fact) is **unique** for all subscribers, that is, one only source for ticks *for each cluster*.

!> The source is linked to a running instance, not to Kwirth core, so you will have a unique Tick provider for each cluster.

### Use
When initializing a channel or when starting a channel (or any other moment afterwards) you can add yourself as a subscriber to Tick channel, and you will start receiving the ticks every five seconds.


## Events
Events provider captures all events occurring inside Kubernetes and distribute them into all subscribers according to their subscription preferences. Kubernetes events are:

  - ADDED/MODIFIED/DELETED events, just those ones.
  - Any Kubernetes object, including CRD's and their CRD instances.

### What for
It is intended to be used by the channels requiring information on what's taking place inside Kubernetes, since this providers captures **all** the activity of the cluster.

### Features
Main features of Events provider are:

  - Capture all ADDED/MODIFIED/DELETED events.
  - Subscribers can set the list of objects they want to subscribe to. For example, `pinocchio` channel is just subscribed to 'Pod' kind events, while `magnify` channel is subscribed to all the kinds the user has selected in `magnify` front.

### Use
To subscribe `events` you need to add yourself as a subscriber specifying just two parameters:
{ kinds: magnifyMessage.params!, syncInstances:Boolean(magnifyMessage.params?.includes('CRD Instances'))}
  - **kinds**, an array of Kubernetes kinds you want to subscribe.
  - **syncInstances**, a `boolean` indicating if you want to subscribe to CRD instances (whose CRD may be created after your subscription started).

You typically subscribe this way:

```typescript
this.clusterInfo.addSubscriber(
    'events',
    this,
    {
      kinds: ['Deployment', 'Node', 'Pod'], 
      syncInstances: false
    }
)
```

## Business

The Business provider bridges external business systems with Kwirth. It exposes an **HTTP POST endpoint** that any external service can call to push business events into Kwirth. Those events are then distributed to all channels that have subscribed to the relevant space/type combination — enabling channels like [Pinocchio](./channels?id=pinocchio) and [Censor](./channels?id=censor) to react to business data in real time.

### What for

  - Feed business metrics, KPIs, or operational events (order status, customer health scores, branch activity...) into Kwirth channels.
  - Let the Pinocchio AI channel correlate business events with Kubernetes activity.
  - Trigger LLM analysis or sender notifications when specific business conditions occur.

### Features

  - **HTTP ingestion** — accepts `POST` requests at the provider endpoint; no Kubernetes dependency needed on the sender side.
  - **Space / type routing** — events carry a `space` and `type` label; subscribers receive only the events matching their subscription.
  - **In-memory accumulation** — all received events are kept in memory grouped by `(space, type)` and passed to subscribers both as the latest event and as the full historical map.

### Event format

POST body (JSON):

```json
{
  "space": "customers",
  "type": "status",
  "data": { "customerId": "C-001", "health": 0.82 }
}
```

- `space` — logical namespace for the data domain (e.g. `"customers"`, `"branches"`, `"orders"`).
- `type` — event sub-type within that space (e.g. `"status"`, `"alert"`, `"immediate"`).
- `data` — arbitrary JSON payload; structure is defined by the producer.

### Endpoint

```
POST <kwirth-base-url>/provider/business
```

### Use

To subscribe a channel to the Business provider:

```typescript
this.clusterInfo.addSubscriber('business', this, {
    spaces: [
        { name: 'customers', types: ['status'] },
        { name: 'branches',  types: ['status', 'alert'] }
    ]
})
```

Each call to `processProviderEvent` receives:

```typescript
{
    last: {
        type: 'event',
        timestamp: string,   // Date.now() as string
        event: { space, type, data }
    },
    all: Map<space, Map<type, event[]>>
}
```

Use `last.event.data` to access the latest payload, or `all` to traverse the full history for any space/type combination.

## Validating
Validating providers receives Kubernetes **validating webhook** calls and send them to all subscribed channels. In the very first version no actions can be taking back to Kubernetes, so all responses from Kwirth to Kubernetes will always be `review: true`, this means Validation provider is only informative for channels.

### What for
You can obtain information about objects **before** they are ADDED/DELETED/MODIFIED. In near future channels will be able to answer `validating` channel regarding the review process, stating if the review is accepted or denied.

### Features
Provider sends validating request to all subscribed channels according to the initial configuration:

### Use
Subscribe to provider the usual way in the moment your channel needs it, **but not in the constructor**. The very first moment you can subscribe is the `startChannel` function. You typically subscribe to `validating` provider like this:

```typescript
this.clusterInfo.addSubscriber('validating', this, {
    kinds: ['Pod']
})
```

And you'll receive validating events this way:
```typescript
processProviderEvent(providerId:string, obj:any) : void {
    switch(providerId) {
        case 'validating':
            console.log('Received Validating event')
            break
        case 'tick':
            console.log('TICK')
            break
        case 'events':
            if (obj.type==='ADDED') {
                console.log('Added pod', obj.obj.metadata?.name)
                // Here invoke LLM through Vercel AI-SDK
            }
            break
        default:
            console.log(`Ignored provider event from ${providerId} to channel ${this.getChannelData().id}`)
    }
}
```
